--- a/build.properties
+++ b/build.properties
@@ -12,5 +12,5 @@ bin.includes = plugin.xml,\
                template/,\
                lib/,\
                schema/,\
-               lib/poi-3.7-20101029.jar
+               lib/poi-3.10-beta1.jar
 
